fix: overflow of froala editor

--- a/static/css/adm_new_post.scss
+++ b/static/css/adm_new_post.scss
@@ -437,10 +437,10 @@ p {
         height: 20vw;
     }
 
-    #content-area {
-        height: 100vw;
-        margin-bottom: 15vw;
-    }
+    // #content-area {
+    //     height: 100vw;
+    //     margin-bottom: 15vw;
+    // }
 
     .buttons-container {
         position: absolute;
